-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.0.0-beta
-
None
To set the application name, QTC needs res/values/strings.xml file, so QTC should copy more files than AndroidManifes.xml, it should copy all res/values* files!
These files can't be created on the fly, because the existing files contains (translated) strings which are needed by the application.
For Gerrit Dashboard: QTCREATORBUG-10821 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
71921,2 | AndroidManifestEditor: Cope with non existing strings.xml | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |