AndroidManifestEditor: Cope with non existing strings.xml

Instead of retrieving the app_name from the strings.xml simply show the
reference to the strings.xml file.

Task-number: QTCREATORBUG-10821
Change-Id: I99bf45df4864857992d03746cf8613b6f097352d
Reviewed-by: BogDan Vatra <bogdan@kde.org>